clang/test/BSC/Negative/Coroutine/Treetransform/DeclStmt/Common/variable_undeclared/variable_undeclared.cbs
// RUN: %clang_cc1 -internal-isystem %S/../../../../../../../../lib/Headers/bsc_include -verify %s

#include "../../../../async-func-read-opposite.hbs"

_Async int f(int start) { 
  int result = _Await read(r1); // #1
  return result;
}

// expected-error@#1 {{use of undeclared identifier 'r1'}}
// expected-error@#1 {{initializing 'int' with an expression of incompatible type '<dependent type>'}}  

int main() {
  return 0;
}
